# wtmux

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.ja.md  README.md  build-inno-installer.ps1  build-installer.ps1  build-msix.ps1  build-portable.ps1  config.example.toml  install.ps1  unblock.ps1
docs/: design-mouse-passthrough.md  tutorial-en.md  tutorial-ja.md
installer/: license.rtf  wtmux.iss  wtmux.wxs
installer/msix/: AppxManifest.xml
src/: config.rs  copymode.rs  history.rs  main.rs
src/core/: mod.rs  pty.rs  session.rs
src/core/term/: mod.rs  parser.rs  state.rs
src/ui/: context_menu.rs  keymapper.rs  mod.rs  renderer.rs  wm_renderer.rs
src/wm/: layout.rs  manager.rs  mod.rs  pane.rs  tab.rs
